--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
 
     </section>
 
-    <section class="lap-section3">
+    <!-- <section class="lap-section3">
 
 
         <h1 class="lap-header1">Access Clipboard Anywhere</h1>
         <p class="lap-info2">Whether you're on the go, or at your home, you can access all your Clipboard snippets in a few simple </br> clicks </p>
     
 
-    </section>
+    </section> -->
 
 
 
